[gd_scene load_steps=3 format=3 uid="uid://t06pw5h2y5q1"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_4q1c8"]
[ext_resource type="Texture2D" uid="uid://nn01hwtrj0n4" path="res://art/ui/buttonLong_grey.png" id="2_aw6oe"]

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_4q1c8")

[node name="end_of_game_screen" type="Node2D" parent="."]

[node name="RestartButton" type="Button" parent="end_of_game_screen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 462.0
offset_top = 329.0
offset_right = 652.0
offset_bottom = 379.0

[node name="Sprite2D" type="Sprite2D" parent="end_of_game_screen/RestartButton"]
position = Vector2(100, 27)
texture = ExtResource("2_aw6oe")

[node name="end_game_scoreDisplay" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="end_game_scoreDisplay"]
position = Vector2(559, 289)
texture = ExtResource("2_aw6oe")

[node name="Label" type="Label" parent="end_game_scoreDisplay"]
modulate = Color(1, 0, 0, 1)
offset_left = 489.0
offset_top = 275.0
offset_right = 628.0
offset_bottom = 298.0
text = "Placeholder Score"

[connection signal="pressed" from="end_of_game_screen/RestartButton" to="." method="_on_restart_button_pressed"]
